erDiagram
    USERS ||--|| USER_PROFILES : "has"
    USERS ||--|| USER_STATS : "tracks"
    USERS ||--o{ GAME_PLAYERS : "joins"
    
    GAME_ROOMS ||--o{ GAME_PLAYERS : "contains"
    GAME_ROOMS ||--o{ GAME_ACTIONS : "records"
    
    GAME_PLAYERS ||--o{ PLAYER_CARDS : "holds"
    GAME_PLAYERS ||--o{ GAME_ACTIONS : "acts"
    
    GAME_ACTIONS ||--o{ ACTION_CHALLENGES : "has"

    USERS {
        bigint id PK
        string username
        string password
        string email
    }
    USER_PROFILES {
        bigint id PK
        bigint user_id FK
        string display_name
        string bio
    }
    GAME_ROOMS {
        bigint id PK
        string room_code
        string status
        int version
    }
    GAME_PLAYERS {
        bigint id PK
        bigint room_id FK
        bigint user_id FK
        int coins
        bool eliminated
    }
    PLAYER_CARDS {
        bigint id PK
        bigint player_id FK
        string card_type
        bool revealed
    }